k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: haubzit-frontend
  labels:
    appl: haubzit-frontend
spec:
  selector:
    appl: haubzit-frontend
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
