k8s/ingress-backend.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: haubzit-backend
spec:
  backend:
    serviceName: haubzit-backend
    servicePort: rest
