k8s/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: haubzit-frontend
spec:
  backend:
    serviceName: haubzit-frontend
    servicePort: http
